# dfnn

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_creation.cpp  bench_pump.cpp  bench_saveload.cpp  bench_topology.cpp
bld/: README.md
env/: dfnn_env.cpp
ext/joelcolors/: joelcolors.h
inc/: dfnn.h  file_archive.h  neuron.h  normalized_value.h  random_id_generator.h
src/: dfnn.cpp  neuron.cpp
tst/: dfnn_test_smoke.cpp
